# the-pit

./: .gitignore  README.md  TECHNICAL.md  package-lock.json  package.json  tsconfig.json
broadcast/: next.config.ts  package-lock.json  package.json
broadcast/app/: globals.css  layout.tsx  page.tsx
broadcast/components/: bits.tsx  verify-slip.tsx
broadcast/data/: feed.json  meta.json  rounds.json
broadcast/lib/: board.ts  data.ts  idl-tape.json
corner/src/: book.ts  chain.ts  cli.ts  feed.ts  grade.ts  personas.ts  slip.ts  state.ts  talk.ts  txline.ts
evidence/: commit-18143850-heel.json  commit-18143850-quant.json  commit-18143850-steamer.json  commit-18257739-heel.json  commit-18257739-quant.json  commit-18257739-steamer.json  commit-18257865-heel.json  commit-18257865-quant.json  commit-18257865-steamer.json  register-heel.json  register-quant.json  register-steamer.json  reveal-18143850-heel.json  reveal-18143850-quant.json  reveal-18143850-steamer.json  reveal-18257739-heel.json  reveal-18257739-quant.json  reveal-18257739-steamer.json  reveal-18257865-heel.json  reveal-18257865-quant.json  reveal-18257865-steamer.json
evidence/tx/: 2Jv3QF845UQY2tRtp2QprgeP5Rjm3HvRKwcHzdXaYeL2s54F3wwrXVMJvkpeNSnf2gJ92XZVwVnK7V95KtENudRt.json  2MXp4vk4gwq4GAhpRLJw7RArxjZU6LXkcuSKDWRxjn1cttg5GEZeXALZiiuiLGyeRg1bz5UKYv8V5AyX2i4Ei6RD.json  (+16 more)
program/: Anchor.toml
program/program-tests/: Cargo.toml
program/program-tests/tests/: tape.rs
scripts/: archive-tx.ts  verify.ts
test/: book.test.ts  decode.test.ts  grade.test.ts  slip.test.ts  talk.test.ts
(+9 files in other folders)
